--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,17 +4,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5px;
 }
 
 .button {
   all: unset;
   font-size: 1.25rem;
   font-weight: bold;
-  border: 2px solid white;
+  border: 2px solid black;
   border-radius: 10px;
   padding: 3px;
-
-  &:hover {
-    cursor: pointer;
-  }
 }
